--- a/style.css
+++ b/style.css
@@ -215,10 +215,10 @@ header h4 > span {
   height: 100%;
 }
 .html {
-  width: 90%;
+  width: 95%;
 }
 .css {
-  width: 80%;
+  width: 95%;
 }
 .js {
   width: 85%;
@@ -226,17 +226,17 @@ header h4 > span {
 .react {
   width: 80%;
 }
-.angular {
-  width: 50%;
+.next {
+  width: 75%;
 }
 .vue {
-  width: 60%;
+  width: 70%;
 }
 .jquery {
-  width: 60%;
+  width: 55%;
 }
 .git {
-  width: 55%;
+  width: 70%;
 }
 .learn-sk {
   list-style: none;
@@ -290,6 +290,20 @@ header h4 > span {
 .hob h4 {
   padding-top: 1.5rem;
 }
+footer {
+  background-color: #2f195f;
+  color: white;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-top: 2.5rem;
+  padding-bottom: 2rem;
+}
+footer p {
+  font-size: 1.5rem;
+}
 @media only screen and (max-width: 800px) {
   /* body{
         width: 100vw;
@@ -311,8 +325,8 @@ header h4 > span {
 
 @media only screen and (max-width: 500px) {
   #container {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     padding-bottom: 2rem;
   }
   header {
@@ -320,19 +334,33 @@ header h4 > span {
     justify-content: space-between;
     flex-wrap: wrap;
   }
+  header > div {
+    padding-top: 2rem;
+  }
+  header h3 {
+    font-size: 20px;
+  }
+  header h4 {
+    font-size: 18px;
+    color: #2f195f;
+  }
+  header h4 > span {
+    font-size: 30px;
+  }
   header h1 {
-    font-size: 70px;
+    font-size: 50px;
     color: white;
-    padding: 4rem 1rem 0 1rem;
+    padding: 3rem 1rem 0 1rem;
     background-color: #2f195f;
     border-radius: 5px;
   }
   .intro-text {
-    padding-top: 1rem;
+    padding-top: 2.5rem;
+    margin-bottom: 2rem;
   }
   .intro-text h1 {
     font-size: 27px;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
   }
   .intro-text h1 span {
     padding-right: 0.5rem;
@@ -340,12 +368,17 @@ header h4 > span {
   .intro-text p {
     font-size: 18px;
     line-height: 22px;
+    margin-bottom: 1rem;
   }
   .personal-info {
     font-size: 16px;
   }
   .personal-info dt {
     padding-right: 0.5rem;
+  }
+  .personal-info dd {
+    padding-left: 10rem;
+    padding-bottom: 0.5rem;
   }
   .int-Section h2,
   .experience h2,
@@ -355,7 +388,7 @@ header h4 > span {
   .proj h2,
   .foot-div h2 {
     margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
   }
   .sect {
     font-size: 22px;
@@ -460,5 +493,22 @@ header h4 > span {
     color: #2f195f;
     margin-top: 0;
     width: 60%;
+  }
+  .hob {
+    padding-left: 2rem;
+  }
+  .hob h4 {
+    margin-left: 2rem;
+  }
+  footer {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    width: 100%;
+    padding-bottom: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  footer p {
+    font-size: 1rem;
   }
 }
